@@ -357,6 +357,7 @@
       <li><a href="http://download.opensuse.org/repositories/home:/FunkyPenguin/openSUSE_10.3/">http://download.opensuse.org/repositories/home:/FunkyPenguin/openSUSE_10.3/</a></li>
     </ul>
   </li>
+  <li>More? Let us know!</li>
 </ul>
 
           <h2>Development</h2>
@@ -377,9 +378,7 @@
           </div>
 
         </div>
-
       </div><!-- bottom -->
-
     </div><!-- body -->
 
     <div id="copyright">
@@ -387,7 +386,15 @@
       <br />
       GNOME and the foot logo are trademarks of the GNOME Foundation.
       <br />
-      <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.</p>
+      <a href="http://tango.freedesktop.org/The_People">Great guys!</a> <a href="http://tango.freedesktop.org/">Great Icons!</a> Free beer for the 
+      <a href="http://tango.freedesktop.org/">Tango Desktop Project!</a>
+      <br />
+      <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.
+      <br />
+      <script type="text/javascript">
+        document.write("Last Updated: " + document.lastModified );
+      </script>
+      </p>
     </div>
 
   </body>
