@@ -187,7 +187,7 @@
 
             <h2>What's the "Anti-toc2 and pro-autotools flames"-counter state?  </h2>
             <p>
-            the counter state is: 9 (and counting...) ;)
+            the counter state is 9 (and counting...) ;)
             </p>
 
           </div>
@@ -264,6 +264,9 @@
       <p>Copyright &copy; 2007, <a href="http://home.cs.tum.edu/~siegel">daniel g. siegel</a>
       <br />
       GNOME and the foot logo are trademarks of the GNOME Foundation.
+      <br />
+      <a href="http://tango.freedesktop.org/The_People">Great guys!</a> <a href="http://tango.freedesktop.org/">Great Icons!</a> Free beer for the 
+      <a href="http://tango.freedesktop.org/">Tango Desktop Project!</a>
       <br />
       <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.
       <br />
