@@ -90,9 +90,16 @@
       <br />
       GNOME and the foot logo are trademarks of the GNOME Foundation.
       <br />
-      <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.</p>
+      <a href="http://tango.freedesktop.org/The_People">Great guys!</a> <a href="http://tango.freedesktop.org/">Great Icons!</a> Free beer for the 
+      <a href="http://tango.freedesktop.org/">Tango Desktop Project!</a>
+      <br />
+      <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.
+      <br />
+      <script type="text/javascript">
+        document.write("Last Updated: " + document.lastModified );
+      </script>
+      </p>
     </div>
 
-
-</body>
+  </body>
 </html>
