@@ -1,3 +1,11 @@
+2007-10-06  daniel g. siegel  <dgsiegel@gmail.com>
+
+	* ChangeLog,
+	  www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/screenshots.html: 
+	  add the tango project to the cheese-footer
+
 2007-10-03  Matthew Barnes  <mbarnes@redhat.com>
 
 	* www.gnome.org/projects/evolution/developer.shtml:
